# libmqjs

./: .gitignore  CMakeLists.txt  README.md  package.json
.github/workflows/: test.yml
patches/: 001-is-object.patch  001-remove-unused-headers.patch  002-exception-uninitialized.patch  002-sweep-finalize-swallowed-blocks.patch  003-exception-uninitialized.patch  003-has-exception.patch  003-is-strict-equal.patch  004-is-object.patch  004-to-int64.patch  005-catch-shadow.patch  005-get-context-opaque.patch  006-arraybuffer-typedarray.patch  006-is-array.patch  007-float16-array.patch
src/: atoms.c  js.c
src/atoms/: CMakeLists.txt
test/: CMakeLists.txt
